Sec9_Chap92-XXX: test code optimization